# curator

./: .gitignore  .gitmodules  LICENSE.md  Makefile  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  tox.ini
config/: config.ini
src/curator/: curator.py  curator_github.py  curator_types.py  workflow.py
src/llm/: llm_client.py  llm_client_types.py
src/util/: set_tuple_encoder.py
tests/: curator.py  test_curator.py  test_github.py  test_workflow.py  workflow.py
